[ORG-15] added sprints
